--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a id="university" href="#">所有大学</a></li>
     </ul>
   </div>
+  <h1 id="title">少女祈祷中……</h1>
   <div id="chart"></div>
   <script src="bower_components/d3/d3.min.js"></script>
   <script src="bower_components/c3/c3.min.js"></script>
