--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>菁英背景提升 - 背景与大学对应关系可视化实现</title>
+  <title>菁英背景提升 - 背景与院校对应关系可视化展现</title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="bower_components/c3/c3.css">
@@ -12,12 +12,15 @@
 <body>
   <div class="container-fluid">
     <header class="page-header">
-      <h1>菁英背景提升 <small>大学专业与背景关系</small></h1>
+      <h1>菁英背景提升 <small>背景与院校对应关系可视化展现</small></h1>
     </header>
-    <div class="rows">
+    <div class="row">
       <div class="col-sm-3">
         <div id="university-chart-list" class="chart-list list-group"></div>
         <div id="major-chart-list" class="chart-list list-group"></div>
+        <div id="paper-chart-list" class="chart-list list-group"></div>
+        <div id="intern-chart-list" class="chart-list list-group"></div>
+        <div id="project-chart-list" class="chart-list list-group"></div>
       </div>
       <div class="col-sm-9">
         <h2 id="title">数据读取中……</h2>
